--- a/frontend/src/app/routes/sidebar/sidebar.component.html
+++ b/frontend/src/app/routes/sidebar/sidebar.component.html
@@ -7,9 +7,9 @@
   <!-- Opciones de Menú -->
   <nav class="flex flex-col p-4 space-y-4">
     <a href="#" class="block p-2 rounded hover:bg-gray-700 transition">Inicio</a>
-    <a href="#" class="block p-2 rounded hover:bg-gray-700 transition">Dashboard</a>
-    <a href="#" class="block p-2 rounded hover:bg-gray-700 transition">Reportes</a>
-    <a href="#" class="block p-2 rounded hover:bg-gray-700 transition">Configuración</a>
+    <a href="/dashboard" class="block p-2 rounded hover:bg-gray-700 transition">Dashboard</a>
+    <a href="/reportes" class="block p-2 rounded hover:bg-gray-700 transition">Reportes</a>
+    <a href="/configuracion" class="block p-2 rounded hover:bg-gray-700 transition">Configuración</a>
   </nav>
 
   <!-- Botón de Logout o algo adicional -->
