--- a/frontend/src/app/routes/sidebar/sidebar.component.html
+++ b/frontend/src/app/routes/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
-<div class="h-full bg-gray-800 text-white flex flex-col">
+<div class="h-screen bg-gray-100 text-gray-900 flex flex-col border-r border-gray-300">
   <!-- Logo o título del Sidebar -->
-  <div class="text-center py-4 bg-gray-900 text-xl font-bold">
+  <div class="text-center py-4 bg-gray-200 text-xl font-bold">
     Mi App
   </div>
 
   <!-- Opciones de Menú -->
   <nav class="flex flex-col p-4 space-y-4">
-    <a href="#" class="block p-2 rounded hover:bg-gray-700 transition">Inicio</a>
-    <a href="/dashboard" class="block p-2 rounded hover:bg-gray-700 transition">Dashboard</a>
-    <a href="/reportes" class="block p-2 rounded hover:bg-gray-700 transition">Reportes</a>
-    <a href="/configuracion" class="block p-2 rounded hover:bg-gray-700 transition">Configuración</a>
+    <a href="/dashboard" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a>
+    <a href="/reportes" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a>
+    <a href="/configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuración</a>
   </nav>
 
   <!-- Botón de Logout o algo adicional -->
   <div class="mt-auto p-4">
-    <button class="w-full bg-red-500 p-2 rounded hover:bg-red-600 transition">Cerrar Sesión</button>
+    <button class="w-full bg-primary p-2 rounded hover:bg-primaryhover text-white px-6 ">Cerrar Sesión</button>
   </div>
 </div>
+
