se agrego un grafico de torta con el consumo electrico / hora durante el mes

--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico/dashboard-historico.component.html
@@ -2,6 +2,11 @@
   <!-- Sidebar -->
   <app-sidebar class="w-1/4 bg-gray-800 text-white"></app-sidebar>
 
-  <br>
-    <div id="consumption-chart" style="width: 100%; height: 400px;"></div>
+  <!-- Contenedor de gráficos -->
+  <div class="flex-1 p-4 flex flex-col">
+    <!-- Gráfico de barras -->
+    <div id="consumption-chart" class="w-full h-1/2"></div>
+    <!-- Gráfico circular -->
+    <div id="daily-consumption-chart" class="w-full h-1/2 mt-4"></div>
+  </div>
 </div>
