se corrigio el problema con la localizacion de archivos

--- a/frontend/src/app/routes/sidebar/sidebar.component.html
+++ b/frontend/src/app/routes/sidebar/sidebar.component.html
@@ -9,6 +9,7 @@
     <a href="/dashboard" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a>
     <a href="/reportes" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a>
     <a href="/configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuración</a>
+    <a href="/historico" class="block p-2 rounded hover:bg-gray-700 transition">Historico</a>
   </nav>
 
   <!-- Botón de Logout o algo adicional -->
