se crea componente guias

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,1 +1,23 @@
-<p>guides works!</p>
+
+<div class="flex h-screen">
+  <app-sidebar class="w-1/4 bg-gray-800 text-white"></app-sidebar>
+
+  <div class="flex-1 p-4 flex flex-col">
+    <div class="guide-container">
+      <h2>Cómo hacer tu casa más eficiente</h2>
+      <p>
+        Para mejorar la eficiencia energética de tu hogar, es importante considerar varias medidas, como optimizar el uso de electrodomésticos, utilizar iluminación LED y aislar correctamente las ventanas y puertas. Estos pequeños cambios pueden ayudarte a reducir el consumo de energía y ahorrar en tus facturas.
+      </p>
+    </div>
+
+
+
+
+
+
+
+
+  </div>
+</div>
+
+
