--- a/frontend/src/app/routes/sidebar/sidebar.component.html
+++ b/frontend/src/app/routes/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
   <!-- Opciones de Menú -->
   <nav class="flex flex-col p-4 space-y-4">
     <a href="/dashboard" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a>
+    <a href="/guides" class="block p-2 rounded hover:bg-gray-300 transition">Guías de recomendación</a>
     <a href="/reportes" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a>
     <a href="/configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuración</a>
     <a href="/historico" class="block p-2 rounded hover:bg-gray-700 transition">Historico</a>
