--- a/frontend/src/app/routes/auth/register/register.component.html
+++ b/frontend/src/app/routes/auth/register/register.component.html
@@ -1,41 +1,68 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<div class="bg-gray-50 flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Create your account</h2>
   </div>
 
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-white p-8 shadow-lg rounded-lg">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="space-y-6">
       <div>
         <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Full Name</label>
         <div class="mt-2">
-          <input id="username" formControlName="username" type="text" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
+          <input id="username" formControlName="username" type="text" required class="w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div *ngIf="registerForm.get('username')?.touched && registerForm.get('username')?.invalid">
+          <span class="text-red-500 text-sm" *ngIf="registerForm.get('username')?.errors?.['required']">
+            Full Name is required.
+          </span>
         </div>
       </div>
 
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
         <div class="mt-2">
-          <input id="email" formControlName="email" type="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
+          <input id="email" formControlName="email" type="email" required class="w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.invalid">
+          <span class="text-red-500 text-sm" *ngIf="registerForm.get('email')?.errors?.['required']">
+            Email is required.
+          </span>
+          <span class="text-red-500 text-sm" *ngIf="registerForm.get('email')?.errors?.['email']">
+            Invalid email format.
+          </span>
         </div>
       </div>
 
       <div>
         <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
         <div class="mt-2">
-          <input id="password" formControlName="password" type="password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
+          <input id="password" formControlName="password" type="password" required class="w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.invalid">
+          <span class="text-red-500 text-sm" *ngIf="registerForm.get('password')?.errors?.['required']">
+            Password is required.
+          </span>
         </div>
       </div>
 
       <div>
-        <label for="password-confirm" class="block text-sm font-medium leading-6 text-gray-900">Confirm Password</label>
+        <label for="passwordConfirm" class="block text-sm font-medium leading-6 text-gray-900">Confirm Password</label>
         <div class="mt-2">
-          <input id="password-confirm" formControlName="passwordConfirm" type="password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
+          <input id="passwordConfirm" formControlName="passwordConfirm" type="password" required  class="w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div *ngIf="registerForm.get('passwordConfirm')?.touched && registerForm.get('passwordConfirm')?.invalid">
+          <span class="text-red-500 text-sm" *ngIf="registerForm.get('passwordConfirm')?.errors?.['required']">
+            Confirm Password is required.
+          </span>
         </div>
       </div>
 
       <div>
         <button type="submit" class="flex w-full justify-center rounded-md bg-primary px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-primaryhover focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">Create account</button>
+      </div>
+
+      <div *ngIf="passwordMismatch" class="text-red-500 text-sm">
+        Passwords do not match.
       </div>
     </form>
   </div>
