se crea un boceto de sidebar y toolbar, pendiente de crear el responsive del sidebar para movil

--- a/frontend/src/app/core/sidebar/sidebar.component.css
+++ b/frontend/src/app/core/sidebar/sidebar.component.css
@@ -1,4 +1,4 @@
-.alerta-historica {
+/* .alerta-historica {
   background-color: white;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -7,5 +7,6 @@
 }
 
 .alerta-historica:hover {
-  background-color: #ffe4e1; /* Rosa pálido */
+  background-color: #ffe4e1; 
 }
+ */
