--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -8,12 +8,11 @@
     </div>
     <div class="my-auto">
       <ul class="menu menu-sm bg-base-100 rounded-box z-[1] p-2">
-        <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Home</a></li>
-        <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a></li>
-        <li class="p-1"><a href=""class="block p-2 rounded hover:bg-gray-300 transition">Huella de carbono</a></li>
+        <li class="p-1"><a href="dashboard" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a></li>
+        <li class="p-1"><a href="huella"class="block p-2 rounded hover:bg-gray-300 transition">Huella de carbono</a></li>
         <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Mis dispositivos</a></li>
-        <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Historicos</a></li>
-        <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a></li>
+        <li class="p-1"><a href="historico" class="block p-2 rounded hover:bg-gray-300 transition">Historicos</a></li>
+        <li class="p-1"><a href="reportes" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a></li>
         <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Alertas</a></li>
         <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Gruias y tutoriales</a></li>
       </ul>
@@ -25,7 +24,7 @@
   <div>
     <ul class="menu menu-sm bg-base-100 rounded-box z-[1] p-2 shadow">
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Mi suscripción</a></li>
-      <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Configuraciones</a></li>
+      <li class="p-1"><a href="configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuraciones</a></li>
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Desloguearse</a></li>
     </ul>
   </div>
