--- a/frontend/src/app/routes/auth/login/login.component.html
+++ b/frontend/src/app/routes/auth/login/login.component.html
@@ -1,15 +1,15 @@
 <div class="bg-gray-50 flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+    <img class="mx-auto h-10 w-auto" src="../../../assets/img/IsoTipoLyticsGrilla.png" alt="Your Company">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm bg-white p-8 shadow-lg rounded-lg">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="bg-white">
       <div>
         <label for="email" class="block text-sm font-medium leading-6 text-gray-900">User Name</label>
         <div class="mt-2">
-          <input formControlName="email" id="email" name="email" type="email" autocomplete="email" required  class="w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input formControlName="email" id="email" name="email" type="email" autocomplete="email" required  class="bg-white w-full border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
           <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
             <span class="text-red-500" *ngIf="loginForm.get('email')?.errors?.['required']">
               El campo  no puede quedar vacío.
@@ -26,7 +26,7 @@
           <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
         </div>
         <div class="mt-2">
-          <input formControlName="password" id="password" name="password" type="password" autocomplete="current-password" required class="w-full border border-gray-300 rounded-lg p-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input formControlName="password" id="password" name="password" type="password" autocomplete="current-password" required class="bg-white w-full border border-gray-300 rounded-lg p-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
           <div *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
             <span class="text-red-500" *ngIf="loginForm.get('password')?.errors?.['required']">
               El campo password no puede quedar vacío.
