--- a/frontend/src/app/routes/landing-page/landing-page.component.html
+++ b/frontend/src/app/routes/landing-page/landing-page.component.html
@@ -1,9 +1,16 @@
 <body class="bg-gray-50">
   <div class="relative overflow-hidden">
     <!-- Header -->
-    <header class="absolute inset-x-0 top-0 z-50 px-6 py-4 bg-white shadow-md">
+    <header class="absolute inset-x-0 top-0 z-50 px-8 py-4 bg-white shadow-md">
       <div class="container mx-auto flex justify-between items-center">
-        <img class="h-10 w-20 sm:w-24 lg:w-auto" src="../../../assets/img/IsoTipoLyticsGrilla.png" alt="Your Company">
+
+        <img class="h-10 w-auto hidden sm:block"
+             src="../../../assets/img/IsoTipoLyticsGrilla.png"
+             alt="Your Company">
+
+        <img class="h-10 w-10 sm:w-24 lg:w-auto block sm:hidden"
+             src="../../../assets/img/lytics_logo_Grilla.png"
+             alt="Your Company (Mobile)">
 
         <div class="space-x-4">
           <a [routerLink]="['/login']" class="text-primary hover:bg-primaryhover hover:text-white font-semibold px-4 py-2 rounded-md">Log in</a>
@@ -11,17 +18,18 @@
         </div>
       </div>
     </header>
+
     <!-- Sección principal -->
-    <section id="primary" class="bg-gray-50 py-10">
+    <section id="primary" class="bg-gradient-to-r from-blue-200 via-gray-50 to-blue-300 bg-gray-50 py-10">
       <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between px-6 py-16 lg:py-24 lg:px-16">
 
         <div class="lg:w-1/2 space-y-6 text-center lg:text-left prose">
-          <h1 class="font-bold leading-tight text-gray-900">Transforma tu hogar, optimiza tu energía.</h1>
+          <h1 class="font-bold leading-tight text-gray-900  animate-electric">Transforma tu hogar, optimiza tu energía.</h1>
           <p class="mt-4 text-gray-700">Obtén alertas personalizadas y recomendaciones para reducir tu huella de carbono y ahorrar en costos de energía. Aprende a optimizar el uso de tus electrodomésticos y proyecta tus futuros gastos con base en tus hábitos actuales.</p>
-          <a href="#Services" class="mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover">Quiero saber más</a>
+          <a href="#Services" class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover">Quiero saber más</a>
         </div>
         <div class="lg:w-1/2 mt-10 lg:mt-0">
-          <img class="w-full h-auto rounded-tl-[50px] rounded-br-lg shadow-lg" src="https://via.placeholder.com/500x400" alt="Product Image">
+          <img class="w-full h-auto rounded-tl-[50px] rounded-br-lg shadow-lg" src="../../../assets/img/hogar.webp" alt="Product Image">
         </div>
       </div>
     </section>
@@ -99,7 +107,7 @@
     </section>
 
     <!-- Dispositivos -->
-    <section id="dispo" class="bg-gray-50 py-10">
+    <section id="dispo" class="bg-gradient-to-r from-blue-200 via-gray-50 to-blue-300 bg-gray-50 py-10">
       <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
         <h5 class="font-bold text-primary mb-8">¿Cómo hacemos esto?</h5>
         <h2 class="text-3xl font-extrabold text-black mb-8">Dispositivos</h2>
@@ -110,14 +118,14 @@
 
 
           <div class="bg-white p-6 rounded-lg shadow-lg transform transition-transform hover:scale-105 relative">
-            <img src="https://via.placeholder.com/150" alt="Dispositivo 1" class="w-full h-auto rounded-lg">
+            <img src="../../../assets/img/Dispositivo 1.webp" alt="Dispositivo 1" class="w-full h-auto rounded-lg">
             <h5 class="font-bold text-primary mb-1">Modelo</h5>
             <h4 class="mt-1 font-semibold text-gray-900 text-lg">No Invasivo</h4>
             <a href="#" class="mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover">Comprar</a>
           </div>
 
           <div class="bg-white p-6 rounded-lg shadow-lg transform transition-transform hover:scale-105 relative">
-            <img src="https://via.placeholder.com/150" alt="Dispositivo 2" class="w-full h-auto rounded-lg">
+            <img src="../../../assets/img/Dispositivo.webp" alt="Dispositivo 2" class="w-full h-auto rounded-lg">
             <h5 class="font-bold text-primary mb-1">Modelo</h5>
             <h4 class="mt-1 font-semibold text-gray-900 text-lg">Invasivo</h4>
             <a href="#" class="mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover">Comprar</a>
@@ -138,7 +146,7 @@
           <div class="mt-6 space-y-4">
             <div class="flex items-start">
               <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-slate-200">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#007bff" class="w-6 h-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#41B8D6" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                   <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
                 </svg>
@@ -151,7 +159,7 @@
 
             <div class="flex items-start">
               <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-slate-200">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#007bff" class="w-6 h-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#41B8D6" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
                 </svg>
               </div>
@@ -163,7 +171,7 @@
 
             <div class="flex items-start">
               <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-slate-200">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#007bff" class="w-6 h-6">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#41B8D6" class="w-6 h-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
                 </svg>
               </div>
@@ -196,7 +204,7 @@
     </section>
 
     <!-- Preguntas Frecuentes -->
-    <section id="pregun" class="bg-gray-50 py-12">
+    <section id="pregun" class="bg-gradient-to-r from-blue-200 via-gray-50 to-blue-300 bg-gray-50 py-12">
       <div class=" p-4 container mx-auto text-center">
         <!-- Títulos de la sección -->
         <h5 class="text-primary font-bold text-lg">Preguntas Frecuentes</h5>
@@ -309,36 +317,36 @@
         <!-- Instagram -->
         <li>
           <a href="https://www.instagram.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.332 3.608 1.307.975.975 1.245 2.242 1.307 3.608.058 1.266.07 1.646.07 4.851 0 3.205-.012 3.585-.07 4.85-.062 1.366-.332 2.633-1.307 3.608-.975.975-2.242 1.245-3.608 1.307-1.266.058-1.646.07-4.85.07-3.205 0-3.585-.012-4.851-.07-1.366-.062-2.633-.332-3.608-1.307-.975-.975-1.245-2.242-1.307-3.608-.058-1.266-.07-1.646-.07-4.85 0-3.205.012-3.585.07-4.851.062-1.366.332-2.633 1.307-3.608.975-.975 2.242-1.245 3.608-1.307 1.266-.058 1.646-.07 4.851-.07zM12 0C8.741 0 8.332.014 7.052.072 5.765.13 4.678.422 3.762 1.338 2.846 2.254 2.555 3.34 2.497 4.628.439 5.91.425 9.35.425 12c0 2.651.014 6.091.072 7.371.058 1.288.35 2.374 1.266 3.29.916.916 2.002 1.208 3.29 1.266 1.28.058 1.689.072 4.948.072 3.26 0 3.668-.014 4.949-.072 1.288-.058 2.374-.35 3.29-1.266.916-.916 1.208-2.002 1.266-3.29.058-1.28.072-1.689.072-4.949 0-3.26-.014-3.668-.072-4.949-.058-1.288-.35-2.374-1.266-3.29-.916-.916-2.002-1.208-3.29-1.266C15.668.014 15.259 0 12 0zm0 5.838c-3.406 0-6.162 2.756-6.162 6.162s2.756 6.162 6.162 6.162 6.162-2.756 6.162-6.162S15.406 5.838 12 5.838zm0 10.162c-2.207 0-4-1.793-4-4s1.793-4 4-4 4 1.793 4 4-1.793 4-4 4zm6.406-11.845c-.796 0-1.44-.644-1.44-1.44s.644-1.44 1.44-1.44 1.44.644 1.44 1.44-.644 1.44-1.44 1.44z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+              <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path>
+          </svg>
           </a>
         </li>
 
         <!-- YouTube -->
         <li>
           <a href="https://www.youtube.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6">
-              <path d="M23.499 6.186c-.273-1.03-1.084-1.84-2.114-2.113-1.866-.504-9.349-.504-9.349-.504s-7.483 0-9.35.504c-1.03.273-1.84 1.083-2.113 2.113C.072 8.052.072 12.004.072 12.004s0 3.952.501 5.818c.273 1.03 1.083 1.84 2.113 2.113 1.867.504 9.349.504 9.349.504s7.483 0 9.349-.504c1.03-.273 1.84-1.083 2.114-2.113.504-1.866.504-5.818.504-5.818s0-3.952-.504-5.818zm-13.8 9.115V8.695l6.494 3.303-6.494 3.303z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+              <path d="M 15 4 C 10.814 4 5.3808594 5.0488281 5.3808594 5.0488281 L 5.3671875 5.0644531 C 3.4606632 5.3693645 2 7.0076245 2 9 L 2 15 L 2 15.001953 L 2 21 L 2 21.001953 A 4 4 0 0 0 5.3769531 24.945312 L 5.3808594 24.951172 C 5.3808594 24.951172 10.814 26.001953 15 26.001953 C 19.186 26.001953 24.619141 24.951172 24.619141 24.951172 L 24.621094 24.949219 A 4 4 0 0 0 28 21.001953 L 28 21 L 28 15.001953 L 28 15 L 28 9 A 4 4 0 0 0 24.623047 5.0546875 L 24.619141 5.0488281 C 24.619141 5.0488281 19.186 4 15 4 z M 12 10.398438 L 20 15 L 12 19.601562 L 12 10.398438 z"></path>
+          </svg>
           </a>
         </li>
 
         <!-- X (Twitter) -->
         <li>
           <a href="https://www.twitter.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6">
-              <path d="M23.447 4.958c-.885.392-1.834.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.955-2.178-1.552-3.594-1.552-2.717 0-4.92 2.202-4.92 4.92 0 .386.044.761.128 1.122-4.088-.205-7.719-2.165-10.148-5.144-.424.729-.667 1.577-.667 2.478 0 1.71.87 3.217 2.191 4.101-.807-.026-1.566-.248-2.23-.617v.062c0 2.388 1.698 4.384 3.95 4.837-.414.113-.849.173-1.297.173-.317 0-.626-.03-.928-.086.627 1.955 2.445 3.38 4.6 3.421-1.685 1.32-3.808 2.107-6.114 2.107-.398 0-.79-.023-1.175-.068 2.179 1.396 4.768 2.212 7.548 2.212 9.058 0 14.01-7.506 14.01-14.01 0-.213-.005-.426-.014-.637.964-.695 1.8-1.562 2.46-2.549z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+              <path d="M26.37,26l-8.795-12.822l0.015,0.012L25.52,4h-2.65l-6.46,7.48L11.28,4H4.33l8.211,11.971L12.54,15.97L3.88,26h2.65 l7.182-8.322L19.42,26H26.37z M10.23,6l12.34,18h-2.1L8.12,6H10.23z"></path>
+              </svg>
           </a>
         </li>
 
         <!-- LinkedIn -->
         <li>
           <a href="https://www.linkedin.com" target="_blank" class="text-gray-500 hover:text-primary">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-6 h-6">
-              <path d="M4.984 3.5c0 1.382-1.124 2.5-2.484 2.5S0 4.882 0 3.5C0 2.12 1.124 1 2.5 1s2.484 1.12 2.484 2.5zM0 24h4.967V7.953H0V24zm8.246-16.047V24h4.974V16.53c0-3.769 4.923-4.081 4.923 0V24h4.967v-9.6c0-8.466-9.625-8.163-9.625 0v9.6H8.246z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="26" height="26" viewBox="0 0 26 26">
+              <path d="M 21.125 0 L 4.875 0 C 2.183594 0 0 2.183594 0 4.875 L 0 21.125 C 0 23.816406 2.183594 26 4.875 26 L 21.125 26 C 23.816406 26 26 23.816406 26 21.125 L 26 4.875 C 26 2.183594 23.816406 0 21.125 0 Z M 8.039063 22.070313 L 4 22.070313 L 3.976563 9.976563 L 8.015625 9.976563 Z M 5.917969 8.394531 L 5.894531 8.394531 C 4.574219 8.394531 3.722656 7.484375 3.722656 6.351563 C 3.722656 5.191406 4.601563 4.3125 5.945313 4.3125 C 7.289063 4.3125 8.113281 5.191406 8.140625 6.351563 C 8.140625 7.484375 7.285156 8.394531 5.917969 8.394531 Z M 22.042969 22.070313 L 17.96875 22.070313 L 17.96875 15.5 C 17.96875 13.910156 17.546875 12.828125 16.125 12.828125 C 15.039063 12.828125 14.453125 13.558594 14.171875 14.265625 C 14.066406 14.519531 14.039063 14.867188 14.039063 15.222656 L 14.039063 22.070313 L 9.945313 22.070313 L 9.921875 9.976563 L 14.015625 9.976563 L 14.039063 11.683594 C 14.5625 10.875 15.433594 9.730469 17.519531 9.730469 C 20.105469 9.730469 22.039063 11.417969 22.039063 15.046875 L 22.039063 22.070313 Z"></path>
+              </svg>
           </a>
         </li>
 
