--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
@@ -1,5 +1,5 @@
 <div class="flex h-screen">
-  <app-sidebar class="w-1/5 bg-gray-800 text-white"></app-sidebar>
+ <!-- <app-sidebar class="w-1/5 bg-gray-800 text-white"></app-sidebar>  -->
 
   <div class="flex-1 p-4 flex flex-col">
     <div class="p-2 border-b border-color: rgb(248 250 252);; px-6">
